--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,15 @@
             <version>2.9.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.31</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
